--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ networks:
     ipam:
      config:
        - subnet: 10.5.0.0/16
-         gateway: 10.5.0.1
+         #gateway: 10.5.0.1
   
   
 
